--- a/inspections/templates/inspections/report_detail.html
+++ b/inspections/templates/inspections/report_detail.html
@@ -84,7 +84,7 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>{% trans 'رقم العقد' %}</th>
+                            <th>{% trans 'رقم الطلب' %}</th>
                             <th>{% trans 'العميل' %}</th>
                             <th>{% trans 'تاريخ المعاينة' %}</th>
                             <th>{% trans 'الحالة' %}</th>
@@ -96,7 +96,13 @@
                     <tbody>
                         {% for inspection in inspections %}
                         <tr>
-                            <td>{{ inspection.contract_number }}</td>
+                            <td>
+                                {% if inspection.order and inspection.order.order_number %}
+                                    {{ inspection.order.order_number }}
+                                {% else %}
+                                    {{ inspection.contract_number }}
+                                {% endif %}
+                            </td>
                             <td>{{ inspection.customer|default:"عميل جديد" }}</td>
                             <td>{{ inspection.scheduled_date|date:"Y/m/d" }}</td>
                             <td>
